# lassilab-storyboard

./: .gitignore  README.md  index.html  package.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  HANDOFF.md  NEXT_TASKS.md  PRD.md  VISION.md  WORKLOG.md
src/: App.tsx  index.css  projectPackage.ts  timingImport.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
