[package]
name = "lassilab-storyboard"
version = "0.1.0"
description = "Local-first desktop storyboard production vault"
authors = ["Lassi LAB"]
edition = "2021"

[lib]
name = "lassilab_storyboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
