[package]
name = "lassilab-storyboard"
version = "0.1.0"
description = "Local-first desktop storyboard production vault"
authors = ["Lassi LAB"]
edition = "2021"

[lib]
name = "lassilab_storyboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
